# expected-json

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/expected_json/: __init__.py  expected_context.py  expected_json.py  json_verifier.py
tests/: test_assert_json.py  test_check_against_ref.py  test_context.py  test_format_path.py  test_generate_paths.py  test_json_verifier.py
