[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expected-json"
dynamic = ["version"]
description = 'Verify JSON contents, used with pytest'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Hai Vu", email = "haivu2004@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/htv2012/expected-json#readme"
Issues = "https://github.com/htv2012/expected-json/issues"
Source = "https://github.com/htv2012/expected-json"

[tool.hatch.version]
path = "src/expected_json/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
installer = "uv"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
  "pytest",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/expected_json tests}"

[tool.coverage.run]
source_pkgs = ["expected_json", "tests"]
branch = true
parallel = true
omit = [
  "src/expected_json/__about__.py",
]

[tool.coverage.paths]
expected_json = ["src/expected_json", "*/expected-json/src/expected_json"]
tests = ["tests", "*/expected-json/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
show_missing = true
#skip_covered = true
